--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My portfolio is awesome because </h1>
+    <header>
+        <h1>Cesar Bonilla</h1>
+        <ul>
+            <li>About</li>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
+    </header>
 </body>
 </html>
