styled header/finishing about section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header -->
     <header>
         <h1>Cesar Bonilla</h1>
         <ul>
@@ -15,5 +16,36 @@
             <li>Contact</li>
         </ul>
     </header>
+    <!-- main -->
+    <main>
+        <!-- about section -->
+        <section class="about-section">
+            <div class="hobbies">
+                <h3>
+                    Hobbies
+                </h3>
+                <ul>
+                    <li>Basketball</li>
+                    <li>Coding</li>
+                    <li>Repeat</li>    
+                </ul>
+                
+            </div>
+            <div class="skills">
+                <h3>Skills</h3>
+                <ul>
+                    <li>
+                        <span class="material-symbols-outlined">html</span>
+                    </li>
+                    <li>
+                        <span class="material-symbols-outlined">css</span>
+                    </li>
+                    <li>
+                        <span class="material-symbols-outlined">javascript</span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
